Task #9 done + ERD + AD