@@ -1,120 +1,91 @@
-package at.ac.htlleonding.boundary;
+package at.ac.htlleonding.resource;
 
-import at.ac.htlleonding.dto.ErrorResponse;
 import at.ac.htlleonding.dto.TeamDTO;
+import at.ac.htlleonding.model.Game;
 import at.ac.htlleonding.model.Team;
 import jakarta.transaction.Transactional;
-import jakarta.validation.Valid;
 import jakarta.ws.rs.*;
-import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.UriInfo;
 
-import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Path("/api/teams")
+@Path("/teams")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
 public class TeamResource {
 
-    @Context
-    UriInfo uriInfo;
-
     @GET
-    public Response getAllTeams() {
-        try {
-            List<TeamDTO> teams = Team.streamAll()
-                .map(TeamDTO::from)
-                .toList();
-            
-            return Response.ok(teams).build();
-        } catch (Exception e) {
-            return Response
-                .status(Response.Status.INTERNAL_SERVER_ERROR)
-                .entity(ErrorResponse.of(500, "Fehler beim Laden der Teams", uriInfo.getPath()))
-                .build();
-        }
+    public List<TeamDTO> getAllTeams() {
+        return Team.<Team>streamAll()
+                .map(TeamDTO::new)
+                .collect(Collectors.toList());
     }
 
     @GET
     @Path("/{id}")
-    public Response getTeam(@PathParam("id") Long id) {
+    public Response getTeamById(@PathParam("id") Long id) {
         Team team = Team.findById(id);
-        
         if (team == null) {
-            return Response
-                .status(Response.Status.NOT_FOUND)
-                .entity(ErrorResponse.of(404, "Team mit ID " + id + " nicht gefunden", uriInfo.getPath()))
-                .build();
+            return Response.status(Response.Status.NOT_FOUND).build();
         }
-        
-        return Response.ok(TeamDTO.from(team)).build();
+        return Response.ok(new TeamDTO(team)).build();
+    }
+
+    @GET
+    @Path("/position/{position}")
+    public Response getTeamByPosition(@PathParam("position") Integer position) {
+        Team team = Team.findByPosition(position);
+        if (team == null) {
+            return Response.status(Response.Status.NOT_FOUND).build();
+        }
+        return Response.ok(new TeamDTO(team)).build();
     }
 
     @POST
     @Transactional
-    public Response createTeam(@Valid TeamDTO dto) {
-        try {
-            // Validierung: Position darf nicht negativ sein
-            if (dto.position() < 0) {
-                return Response
-                    .status(Response.Status.BAD_REQUEST)
-                    .entity(ErrorResponse.of(400, "Position darf nicht negativ sein", uriInfo.getPath()))
-                    .build();
+    public Response createTeam(TeamDTO teamDTO) {
+        Team team = teamDTO.toEntity();
+
+        if (teamDTO.gameId != null) {
+            Game game = Game.findById(teamDTO.gameId);
+            if (game == null) {
+                return Response.status(Response.Status.BAD_REQUEST)
+                        .entity("Game not found")
+                        .build();
             }
-
-            // Prüfen ob Position bereits existiert
-            Team existing = Team.findByPosition(dto.position());
-            if (existing != null) {
-                return Response
-                    .status(Response.Status.CONFLICT)
-                    .entity(ErrorResponse.of(409, "Team mit Position " + dto.position() + " existiert bereits", uriInfo.getPath()))
-                    .build();
-            }
-
-            Team team = dto.toEntity();
-            team.persist();
-
-            URI location = uriInfo.getAbsolutePathBuilder().path(team.id.toString()).build();
-            return Response
-                .created(location)
-                .entity(TeamDTO.from(team))
-                .build();
-
-        } catch (Exception e) {
-            return Response
-                .status(Response.Status.INTERNAL_SERVER_ERROR)
-                .entity(ErrorResponse.of(500, "Fehler beim Erstellen des Teams: " + e.getMessage(), uriInfo.getPath()))
-                .build();
+            team.game = game;
         }
+
+        team.persist();
+        return Response.status(Response.Status.CREATED)
+                .entity(new TeamDTO(team))
+                .build();
     }
 
     @PUT
     @Path("/{id}")
     @Transactional
-    public Response updateTeam(@PathParam("id") Long id, @Valid TeamDTO dto) {
+    public Response updateTeam(@PathParam("id") Long id, TeamDTO teamDTO) {
         Team team = Team.findById(id);
-        
         if (team == null) {
-            return Response
-                .status(Response.Status.NOT_FOUND)
-                .entity(ErrorResponse.of(404, "Team mit ID " + id + " nicht gefunden", uriInfo.getPath()))
-                .build();
+            return Response.status(Response.Status.NOT_FOUND).build();
         }
 
-        try {
-            team.position = dto.position();
-            team.persist();
-            
-            return Response.ok(TeamDTO.from(team)).build();
-        } catch (Exception e) {
-            return Response
-                .status(Response.Status.INTERNAL_SERVER_ERROR)
-                .entity(ErrorResponse.of(500, "Fehler beim Aktualisieren des Teams: " + e.getMessage(), uriInfo.getPath()))
-                .build();
+        team.position = teamDTO.position;
+
+        if (teamDTO.gameId != null) {
+            Game game = Game.findById(teamDTO.gameId);
+            if (game == null) {
+                return Response.status(Response.Status.BAD_REQUEST)
+                        .entity("Game not found")
+                        .build();
+            }
+            team.game = game;
         }
+
+        return Response.ok(new TeamDTO(team)).build();
     }
 
     @DELETE
@@ -122,22 +93,17 @@ public class TeamResource {
     @Transactional
     public Response deleteTeam(@PathParam("id") Long id) {
         Team team = Team.findById(id);
-        
         if (team == null) {
-            return Response
-                .status(Response.Status.NOT_FOUND)
-                .entity(ErrorResponse.of(404, "Team mit ID " + id + " nicht gefunden", uriInfo.getPath()))
-                .build();
+            return Response.status(Response.Status.NOT_FOUND).build();
         }
+        team.delete();
+        return Response.noContent().build();
+    }
 
-        try {
-            team.delete();
-            return Response.noContent().build();
-        } catch (Exception e) {
-            return Response
-                .status(Response.Status.INTERNAL_SERVER_ERROR)
-                .entity(ErrorResponse.of(500, "Fehler beim Löschen des Teams: " + e.getMessage(), uriInfo.getPath()))
-                .build();
-        }
+    @DELETE
+    @Transactional
+    public Response deleteAllTeams() {
+        Team.deleteAllTeams();
+        return Response.noContent().build();
     }
 }
